Fixed activity detail page where icons overlap. Updated HTML and removed repeated elements.

--- a/flat-boxy/css/styles.css
+++ b/flat-boxy/css/styles.css
@@ -96,7 +96,6 @@ span.icon{
 }
 span.icon-medium{
 	height:50px;
-	width:50px;
 	display:block;
 }
 span.up-arrow{
